# Armbian_E1

./: README.md
.github/workflow/: hermesclient.yml
.github/workflows/: hermesclient.yml
E1Recorder/: .gitignore  CMakeLists.txt  README.md  main.cpp  toolchain-arm64.cmake
E1Recorder/qml/: CircularProgress.qml  DeviceSettingsScenarioPage.qml  FileListItem.qml  FileListScreen.qml  Main.qml  MockAudioRecorder.qml  MockStorageManager.qml  ModernRecordingScreen.qml
E1Recorder/recorder/: CMakeLists.txt  recorder.cpp  recorder.h
E1Recorder/resources/: qml.qrc
E1Recorder/src/: CMakeLists.txt  audiorecorder.cpp  audiorecorder.h  hardwarekeymanager.cpp  hardwarekeymanager.h  storagemanager.cpp  storagemanager.h
userpatch/kernel/: rk3308-evb-dmic-pdm-v13.dtb
userpatch/overlay/etc/: asound.conf
userpatches/: lib.config
